<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/country1"
            android:title="@string/country1"
            android:icon="@drawable/taiwan_icon"
            android:checked="true"/>
        <item
            android:id="@+id/country2"
            android:title="@string/country2"
            android:icon="@drawable/us_icon"/>
        <item
            android:id="@+id/country3"
            android:title="@string/country3"
            android:icon="@drawable/uk_icon"
            />
        <item
            android:id="@+id/country4"
            android:title="@string/country4"
            android:icon="@drawable/japan_icon"/>
        <item
            android:id="@+id/country5"
            android:title="@string/country5"
            android:icon="@drawable/korea_icon"/>


    </group>

</menu>